--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ https://www.tooplate.com/view/2128-tween-agency
                                 </div>
                             </div>
 
-                            <div class="tab-pane fade" id="nav-profile" role="tabpanel"
+                            <!--<div class="tab-pane fade" id="nav-profile" role="tabpanel"
                                 aria-labelledby="nav-profile-tab">
                                 <div class="row">
                                     <div class="col-lg-5 col-12 m-auto">
@@ -278,7 +278,7 @@ https://www.tooplate.com/view/2128-tween-agency
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
 
@@ -289,7 +289,7 @@ https://www.tooplate.com/view/2128-tween-agency
         <section class="services section-padding" id="section_3">
             <div class="container">
                 <div class="row">
-
+                    <h5 class="text-center">“Pentacle Marketing xây dựng sự hiện diện trên nền tảng số thông qua các hoạt động marketing thu hút, nội dung chất lượng cao và các giải pháp dễ tiếp cận với khách hàng doanh nghiệp.”</h5>
                     <h2 class="mb-5 text-center">Dịch vụ của chúng tôi</h2>
 
                     <div class="col-lg-4 col-12 d-flex bg-primary p-0">
